update post: Do I Bleed ?

--- a/cmh3f1102000102jxbrae43of.md
+++ b/cmh3f1102000102jxbrae43of.md
@@ -5,14 +5,14 @@ seoDescription: "Explore the transformative power of Batman as a symbol of resil
 datePublished: Thu Oct 23 2025 12:45:50 GMT+0000 (Coordinated Universal Time)
 cuid: cmh3f1102000102jxbrae43of
 slug: do-i-bleed
-cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1761223217513/31b3301c-d2d6-4059-b446-960ad5f62e4e.webp
+cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1761223645261/7bc79db3-0eba-43ef-9268-c984636f8ee9.png
 tags: hope, life-lessons, pain, mental-health, batman, personal-essay, willpower, superman, batman-the-dark-knight-resilience-philosophy-mental-health-personal-essay-willpower-superman-life-lessons-pain-hope-mulligatawny-soup-deepan, the-dark-knight, deepan
 
 ---
 
 A man who lived in the dark and became the night , once taught me how to live in the light .
 
-> *“****Why do we fall, Bruce?*** ***So we can learn to pick ourselves up.”***
+> “***Why do we fall, Bruce?*** ***So we can learn to pick ourselves up.”***
 
 I’ve read and watched countless books and movies, but nothing — **nothing** — has ever fucking hit me the way **BATMAN** has. He wasn’t just a person….. **He was a symbol.**
 
@@ -53,7 +53,7 @@ I am no atheist . But I don’t accept that we have a fate on which we live . I 
 
 ## **No Man’s Land:**
 
-I think we are all part of a goddamn horror movie, and guess what? **We’re all the main characters. We don’t die but we suffer.**But here’s the thing about No Man’s Land — **you either fight or you fade. And I? I fight.**
+I think we are all part of a goddamn horror movie, and guess what? \*\*We’re all the main characters. We don’t die but we suffer.\*\*But here’s the thing about No Man’s Land — **you either fight or you fade. And I? I fight.**
 
 I know I am out complaining about my life that I have gone through shit but I am not sure I have gone through as much as others but i have gone through pretty terrible stuff and I am not here anymore to justify my pain.
 
